force-app/main/default/objects/Lead/fields/Lead_Notes__c.field-meta.xml
<CustomField>
    <fullName>Lead_Notes__c</fullName>
    <inlineHelpText>What details are important about this Lead?</inlineHelpText>
    <label>Lead Notes</label>
    <length>250</length>
    <required>true</required>
    <type>Text</type>
</CustomField>