force-app/main/default/objects/Lead/fields/Lead_type__c.field-meta.xml
<CustomField>
    <fullName>Lead_type__c</fullName>
    <label>Lead type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Directory</fullName>
            </value>
            <value>
                <fullName>Donor</fullName>
            </value>
            <value>
                <fullName>Exhibitor</fullName>
            </value>
            <value>
                <fullName>Marketplace</fullName>
            </value>
            <value>
                <fullName>Member</fullName>
            </value>
            <value>
                <fullName>Speaker</fullName>
            </value>
            <value>
                <fullName>Sponsor</fullName>
            </value>
            <value>
                <fullName>Venue</fullName>
            </value>
            <value>
                <fullName>Volunteer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>